# apps/api/src/app/modules/interaction/interaction.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Post, Put, Param, HttpStatus, Query, ParseIntPipe, UseInterceptors, UploadedFile, BadRequestException, Req } from '@nestjs/common';
+import { Controller, Get, Post, Put, Param, HttpStatus, Query, ParseIntPipe, UseInterceptors, BadRequestException, Req } from '@nestjs/common';
 import { ApiBearerAuth, ApiBody, ApiConsumes, ApiResponse, ApiTags } from '@nestjs/swagger';
 
 import { InteractionService } from './interaction.service';
@@ -13,7 +13,7 @@ import dayjs = require('dayjs');
 import _ = require('lodash');
 
 // From https://github.com/nestjs/swagger/issues/417#issuecomment-562869578 and https://swagger.io/docs/specification/describing-request-body/file-upload/
-const AttachmentPostBody = (fileName: string = 'file'): MethodDecorator => (
+const AttachmentPostBody = (file: string = 'file'): MethodDecorator => (
   target: any,
   propertyKey: string,
   descriptor: PropertyDescriptor,
@@ -22,7 +22,7 @@ const AttachmentPostBody = (fileName: string = 'file'): MethodDecorator => (
     schema: {
       type: 'object',
       properties: {
-        [fileName]: {
+        [file]: {
           type: 'string',
           format: 'binary',
         },
@@ -37,13 +37,16 @@ const AttachmentPostBody = (fileName: string = 'file'): MethodDecorator => (
         },
         communicationDetails: {
           type: 'string'
+        },
+        filename: {     // add extra 'filename' field for posted form's params
+          type: 'string'
         }
       },
     },
   })(target, propertyKey, descriptor);
 };
 
-const AttachmentUpdateBody = (fileName: string = 'file'): MethodDecorator => (
+const AttachmentUpdateBody = (file: string = 'file'): MethodDecorator => (
   target: any,
   propertyKey: string,
   descriptor: PropertyDescriptor,
@@ -52,7 +55,7 @@ const AttachmentUpdateBody = (fileName: string = 'file'): MethodDecorator => (
     schema: {
       type: 'object',
       properties: {
-        [fileName]: {
+        [file]: {
           type: 'string',
           format: 'binary',
         },
@@ -70,6 +73,9 @@ const AttachmentUpdateBody = (fileName: string = 'file'): MethodDecorator => (
         },
         revisionCount: {
           type: 'number'
+        },
+        filename: {
+          type: 'string'
         }
       },
     },
@@ -95,7 +101,7 @@ export class InteractionController {
   @ApiResponse({ status: HttpStatus.CREATED })
   async create(
     @UserRequiredHeader() user: User,
-    @UploadedFile('file') file: Express.Multer.File,
+    // @UploadedFile('file') file: Express.Multer.File,
     @Req() request: Request): Promise<InteractionResponse> {
       const reqDate = _.isEmpty(request.body['communicationDate'])
                       ? dayjs().format(this.DATE_FORMAT)
@@ -105,8 +111,8 @@ export class InteractionController {
         request.body['stakeholder'],
         reqDate,
         request.body['communicationDetails'],
-        file? file.originalname: null,
-        file? file.buffer: null
+        request.body['filename'],
+        request.body['file']    // note, using formData posted, we can obtain fileContent/filename directly from post body.
       );
 
       // Validate fields.
@@ -137,9 +143,8 @@ export class InteractionController {
   async update(
     @UserRequiredHeader() user: User,
     @Param('id', ParseIntPipe) id: number,
-    @UploadedFile('file') file: Express.Multer.File,
+    // @UploadedFile('file') file: Express.Multer.File,
     @Req() request: Request): Promise<InteractionResponse> {
-
       const reqDate = _.isEmpty(request.body['communicationDate'])
                       ? dayjs().format(this.DATE_FORMAT)
                       : dayjs(request.body['communicationDate']).format(this.DATE_FORMAT);
@@ -148,8 +153,8 @@ export class InteractionController {
         request.body['stakeholder'],
         reqDate,
         request.body['communicationDetails'],
-        file? file.originalname: null,
-        file? file.buffer: null,
+        request.body['filename'],
+        request.body['file'],
         id,
         await new ParseIntPipe().transform(request.body['revisionCount'], null)
       );
